# crs

./: .crs-ignore  .headache.dirs  CHANGES.md  COPYING.HEADER  NOTICE.md  README.md  crs-dev.opam  crs-tests.opam  crs.opam  crs.opam.template  dune  dune-project  dunolint  headache.sh
.github/: crs-config.json
.github/workflows/: ci.yml  crs.yml  deploy-doc.yml  dune-pkg-more-ci.yml  dunolint.yml  more-ci.yml  release-artifacts.yml  test-deploy-doc.yml
doc/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  update-ocaml-docs.sh
doc/blog/: authors.yml  tags.yml
doc/blog/2025-04-14-hello/: index.md
doc/blog/2025-04-14-introducing-crs/: index.md
doc/docs/reference/crs-actions-config/: README.md  complete-example.json  crs_actions_config.ml  crs_actions_config.mli  dune  invalid-severity.json  invalid-wrong-type.json  minimal-with-allowlist.json  valid-full.json  wrapped-enum.json
dunolint-config/: dune  main.ml
editor-integration/emacs/: .gitignore  CONTRIBUTING.md  README.md  crs-grep.el  dune
lib/cr_comment/test/: dune  test__cr_comment.mli  test__filter.ml  test__kind.ml  test__priority.ml  test__qualifier.ml  test__status.ml
lib/crs/src/: crs.ml  (+2 more)
lib/crs_cli/src/: annotation.ml  annotation.mli  assignee.ml  assignee.mli  cmd__grep.ml  cmd__grep.mli  cmd__tools__config__validate.ml  cmd__tools__crs_ignore.ml  cmd__tools__crs_ignore.mli  cmd__tools__emacs_grep.ml  cmd__tools__enclosing_repo_info.ml  cmd__tools__github__annotate_crs.ml  cmd__tools__github__annotate_crs.mli  cmd__tools__github__summary_comment.ml  cmd__tools__github_workflow_annotations.ml  cmd__tools__reviewdog__annotate_crs.ml  common_helpers.ml  common_helpers.mli  config.ml  config.mli  crs_cli.ml  crs_cli.mli  dune  enclosing_repo.ml  enclosing_repo.mli  github_annotation.ml  import.ml  import.mli  review_mode.ml  review_mode.mli  reviewdog_utils.ml  reviewdog_utils.mli  summary_table.ml  summary_table.mli  user_warning.ml  user_warning.mli
lib/crs_cli/test/: dune  printbox_table.ml  printbox_table.mli  test__annotation.ml  test__assignee.ml  test__crs_cli.ml  test__github_annotation.ml  test__print_table_experimental.ml  test__priority.ml  test__review_mode.ml  test__reviewdog_diagnostic.ml  test__summary_table.ml  tests_helpers.ml  tests_helpers.mli
lib/crs_parser/src/: crs_ignore.ml  crs_ignore.mli  crs_parser.ml  crs_parser.mli  dune  file_parser.ml  file_parser.mli  github_annotation.ml  github_annotation.mli  header_parser.ml  header_parser.mli  invalid_cr_parser.ml  invalid_cr_parser.mli  user_message.ml  user_message.mli
lib/crs_parser/test/: dune  test__crs_ignore.ml  test__crs_parser.ml  test__crs_parser.mli  test__filter.ml  test__invalid_crs.ml  test__re.ml
lib/reviewdog/: LICENSE.HEADER  headache.sh
lib/reviewdog/src/: code.ml  code.mli  diagnostic.ml  diagnostic.mli  diagnostic_result.ml  dune  location.ml  location.mli  position.ml  position.mli  range.ml  related_location.ml  related_location.mli  severity.ml  source.ml  suggestion.ml
lib/reviewdog/test/: dune  reviewdog_with_quickcheck.ml  reviewdog_with_quickcheck.mli  test__json.ml  test__json.mli
lib/reviewdog/test/reviewdog_rdf/: NOTICE.md  dune  reviewdog.ml  reviewdog.mli  reviewdog.proto  reviewdog_rdf.mli
schema/: README.md  crs-config.schema.json  dune
src/crs/cr-comment/: cr_comment.ml  cr_comment.mli  cr_comment0.ml  cr_comment0.mli  dune  filter.ml  filter.mli  priority.ml  priority.mli  qualifier.ml  qualifier.mli  status.ml  status.mli  user_handle.ml  user_handle.mli
src/crs/crs-cli/: annotation.ml  annotation.mli  assignee.ml  assignee.mli  cmd__grep.ml  cmd__tools__config__validate.ml  cmd__tools__crs_ignore.ml  cmd__tools__emacs_grep.ml  cmd__tools__emacs_grep.mli  cmd__tools__enclosing_repo_info.ml  cmd__tools__github__annotate_crs.ml  cmd__tools__github__summary_comment.ml  cmd__tools__github__summary_comment.mli  cmd__tools__reviewdog__annotate_crs.ml  common_helpers.ml  common_helpers.mli  config.ml  config.mli  crs_cli.ml  crs_cli.mli  dune  enclosing_repo.ml  enclosing_repo.mli  review_mode.ml  review_mode.mli  reviewdog_utils.ml  reviewdog_utils.mli  summary_table.ml  summary_table.mli
src/crs/crs-parser/: crs_ignore.ml  crs_ignore.mli  crs_parser.ml  crs_parser.mli  dune  file_parser.ml  file_parser.mli  github_annotation.ml  github_annotation.mli  header_parser.ml  header_parser.mli  invalid_cr_parser.ml  invalid_cr_parser.mli  user_message.ml  user_message.mli
src/myers/: COPYING.HEADER  dune  myers.ml  myers.mli
src/stdlib/: COPYING.HEADER  absolute_path0.ml  absolute_path0.mli  char0.ml  char0.mli  code_error.ml  code_error.mli  crs_stdlib.ml  crs_stdlib.mli  dune  dyn0.ml  dyn0.mli  err0.ml  err0.mli  fpath0.ml  fpath0.mli  fsegment0.ml  fsegment0.mli  int0.ml  int0.mli  json.ml  json.mli  list0.ml  list0.mli  loc0.ml  loc0.mli  option0.ml  option0.mli  pp0.ml  pp0.mli  pp_tty0.ml  pp_tty0.mli  ref0.ml  ref0.mli  relative_path0.ml  relative_path0.mli  result0.ml  result0.mli  stdlib0.ml  stdlib0.mli  (+2 more)
test/cram/: annotate-crs.t  crs-ignore.t  dependabot.t  dune  emacs-grep.t  enclosing-repo-info.t  grep.t  hg.t  run.t  validate-config.t
test/crs/cr-comment/: dune  test__cr_comment.ml  test__filter.ml  test__priority.ml  test__qualifier.ml  test__status.ml  test__user_handle.ml
test/crs/crs-cli/: dune  printbox_table.ml  printbox_table.mli  test__annotation.ml  test__assignee.ml  test__crs_cli.ml  test__github_annotation.ml  test__print_table_experimental.ml  test__priority.ml  test__review_mode.ml  test__reviewdog_diagnostic.ml  test__summary_table.ml  tests_helpers.ml  tests_helpers.mli
test/crs/crs-parser/: dune  test__crs_ignore.ml  test__crs_parser.ml  test__filter.ml  test__invalid_crs.ml  test__re.ml
test/expect/: README.md  dune  test__crs_rewriter.ml  test__crs_rewriter.mli  test__lint_invalid_crs.ml  test__lint_invalid_crs.mli  tests_helpers.ml  tests_helpers.mli
test/myers/: dune  test__myers.ml  test__myers.mli
test/stdlib/: dune  test__char.ml  test__expect.ml  test__int.ml  test__int.mli  test__list.ml  test__string.ml
(+84 files in other folders)
