(library
 (name crs_expect_test)
 (package crs-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_sexp0
  -open
  Volgo
  -open
  Crs_stdlib)
 (libraries
  base
  cr_comment
  crs_parser
  crs_stdlib
  file-rewriter
  fpath
  fpath-sexp0
  loc
  patdiff.expect_test_patdiff
  volgo)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
