(library
 (name crs_expect_test)
 (package crs-tests)
 (inline_tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Volgo
  -open
  Crs_stdlib
  -open
  Cr_comment.Std
  -open
  Crs_parser.Private.Std
  -open
  Crs_myers)
 (libraries cr_comment crs_myers crs_parser crs_stdlib file-rewriter volgo)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
