(library
 (name crs_cli)
 (public_name crs.crs-cli)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Stdio
  -open
  Volgo_base
  -open
  Cmdlang)
 (libraries
  base
  cmdlang
  cr_comment
  crs_parser
  file-rewriter
  fpath
  fpath-base
  loc
  pageantty.git-pager
  pp
  pplumbing-err
  pplumbing-pp-tty
  print-table
  reviewdog
  stdio
  unix
  volgo-base
  volgo-git-unix
  volgo-hg-unix
  yojson
  yojson-five)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_hash
   ppx_here
   ppx_sexp_conv
   ppx_sexp_value)))
