(library
 (name crs_cli_test)
 (public_name crs-tests.crs_cli_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Pplumbing_err
  -open
  Expect_test_helpers_base
  -open
  Volgo
  -open
  Cmdlang
  -open
  Crs_stdlib)
 (libraries
  base
  cmdlang
  cmdlang-stdlib-runner
  cr_comment
  crs_cli
  crs_parser
  crs_stdlib
  expect_test_helpers_core.expect_test_helpers_base
  fpath
  fpath-base
  loc
  pplumbing-err
  print-table
  printbox
  printbox-md
  printbox-text
  reviewdog
  uutf
  volgo
  yojson)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_hash
   ppx_here
   ppx_let
   ppx_sexp_conv
   ppx_sexp_value)))
