(library
 (name reviewdog)
 (public_name crs.reviewdog)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a -open Base)
 (libraries base yojson)
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_deriving_yojson
   ppx_enumerate
   ppx_sexp_conv)))
