(library
 (name reviewdog_test)
 (public_name crs-tests.reviewdog_test)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Expect_test_helpers_base
  -open
  Base_quickcheck)
 (libraries
  base
  base_quickcheck
  expect_test_helpers_core.expect_test_helpers_base
  ppx_yojson_conv_lib
  reviewdog
  reviewdog_rdf
  yojson)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps
   -unused-code-warnings=force
   ppx_compare
   ppx_enumerate
   ppx_expect
   ppx_here
   base_quickcheck.ppx_quickcheck
   ppx_sexp_conv
   ppx_sexp_value)))
