(library
 (name cr_comment)
 (public_name crs.cr-comment)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Volgo
  -open
  Crs_stdlib)
 (libraries crs_stdlib fpath loc sexplib0 volgo)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
