(library
 (name crs_cli)
 (public_name crs.crs-cli)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Volgo
  -open
  Cmdlang
  -open
  Crs_stdlib)
 (libraries
  cmdlang
  cr_comment
  crs_parser
  crs_stdlib
  file-rewriter
  fpath
  fpath-sexp0
  loc
  pageantty.git-pager
  pp
  pplumbing-err
  pplumbing-pp-tty
  print-table
  reviewdog
  sexplib0
  unix
  volgo
  volgo-git-unix
  volgo-hg-unix
  yojson
  yojson-five)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
