(library
 (name crs_parser)
 (public_name crs.crs-parser)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Pplumbing_pp_tty
  -open
  Pplumbing_err
  -open
  Fpath_sexp0
  -open
  Stdio
  -open
  Volgo
  -open
  Crs_stdlib)
 (libraries
  base
  cr_comment
  crs_stdlib
  fpath
  fpath-sexp0
  loc
  pp
  pplumbing-err
  pplumbing-pp-tty
  re
  sexplib0
  spawn
  stdio
  unix
  volgo)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess no_preprocessing))
