(library
 (name cr_comment_test)
 (package crs-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Volgo
  -open
  Crs_stdlib
  -open
  Cr_comment.Std)
 (libraries cr_comment crs_stdlib volgo)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
