(library
 (name crs_cli_test)
 (package crs-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Fpath_sexp0
  -open
  Pplumbing_err
  -open
  Volgo
  -open
  Cmdlang
  -open
  Crs_stdlib)
 (libraries
  cmdlang
  cmdlang-stdlib-runner
  cr_comment
  crs_cli
  crs_parser
  crs_stdlib
  fpath
  fpath-sexp0
  loc
  pplumbing-err
  print-table
  printbox
  printbox-md
  printbox-text
  reviewdog
  uutf
  volgo
  yojson)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
