(library
 (name crs_parser_test)
 (package crs-tests)
 (flags
  :standard
  -w
  +a-4-40-41-42-44-45-48-66
  -warn-error
  +a
  -open
  Base
  -open
  Fpath_base
  -open
  Volgo
  -open
  Crs_stdlib)
 (libraries
  base
  cr_comment
  crs_parser
  crs_stdlib
  fpath
  fpath-base
  loc
  patdiff.expect_test_patdiff
  re
  volgo)
 (inline_tests)
 (instrumentation
  (backend bisect_ppx))
 (lint
  (pps ppx_js_style -allow-let-operators -check-doc-comments))
 (preprocess
  (pps ppx_expect)))
