(library
 (name reviewdog_rdf)
 (public_name crs-tests.reviewdog-rdf)
 (flags :standard -w +a-4-40-41-42-44-45-48-66 -warn-error +a)
 (libraries pbrt pbrt_yojson)
 (preprocess no_preprocessing))

(rule
 (copy %{project_root}/.ocamlformat .ocamlformat))

(rule
 (targets reviewdog.ml reviewdog.mli)
 (package crs-tests)
 (deps
  .ocamlformat
  (glob_files *.proto))
 (alias runtest)
 (mode promote)
 (action
  (progn
   (run ocaml-protoc reviewdog.proto --yojson --make --ml_out .)
   (run ocamlformat --inplace %{targets}))))
